# tone

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: __init__.py  memory.py  performance.py  run_all.py  token_efficiency.py
tests/: __init__.py  conftest.py  test_async_and_debug.py  test_decode.py  test_ecosystem.py  test_edge_cases.py  test_encode.py  test_enhancements.py  test_roundtrip.py  test_spec_compliance.py
tone/: __init__.py  __main__.py  __version__.py  _core.py  async_support.py  cli.py  constants.py  context.py  debug.py  exceptions.py  format.py  stream.py  tokens.py  types.py
tone/decode/: __init__.py  decoders.py  parser.py  scanner.py  validation.py
tone/encode/: __init__.py  encoders.py  normalize.py  primitives.py  writer.py
tone/integrations/: __init__.py  converters.py  fastapi.py  pandas.py  pydantic.py
tone/shared/: __init__.py  literal_utils.py  string_utils.py  validation.py
tone/utils/: __init__.py
